--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 header, footer {
-  background-color: #ffa500;
+  background-color: #ff0073;
   text-align: left;
 /*  min-width: 500px; */
 }
@@ -46,8 +46,8 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
-  padding: 10px 0px 10px 10px;
+  color: #ff0073;
+  padding: 8px 0px 10px 8px;
 }
 
 img {
@@ -87,7 +87,7 @@ font-family: 'Work Sans';
 }
 
 .myButton:hover {
-    background-color:#e69708;
+    background-color:#ff0073;
 }
 
 .myButton:active {
