--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,8 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(40%, 1fr) ) ;
   grid-gap: 20px;
-  margin: 44px 40px
-
-  justify-items center;
+  margin: 44px 40px;
+  justify-items: center;
   justify-content: center;
   align-items: stretch;
   align-content: center;
