--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,13 @@ font-family: 'Work Sans';
   border-top: 1px solid #4a4a4a;
 }
 
+.badge {
+  justify-items: center;
+  justify-content: center;
+  align-items: stretch;
+  align-content: center;
+}
+
 .logo {
   width: 115px;
   height: 21.1px;
