--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header, footer {
 
 header {
   font-family: Work Sans;
-  background: #642B73;  /* fallback for old browsers */
+  background: #ffffff;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #C6426E, #642B73); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   min-height: 100vh;
